--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
-name = "msp430"
+name = "msp430fr2355"
 version = "0.1.0"
 authors = ["YuhanLiin <linyuhan0315@hotmail.com>"]
 edition = "2018"
+description = "Peripheral access crate for MSP430FR2355 microcontroller"
+keywords = ["no-std", "msp430", "ti", "launchpad"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -13,7 +15,7 @@ vcell = "0.1.0"
 
 [dependencies.msp430-rt]
 optional = true
-version = "0.1.0"
+version = "0.1.3"
 
 [features]
 rt = ["msp430-rt"]
