Prepare for publishing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ authors = ["YuhanLiin <linyuhan0315@hotmail.com>"]
 edition = "2018"
 description = "Peripheral access crate for MSP430FR2355 microcontroller"
 keywords = ["no-std", "msp430", "ti", "launchpad"]
+repository = "https://github.com/YuhanLiin/msp430fr2355"
+license = "MIT OR Apache-2.0"
+documentation = "https://docs.rs/msp430fr2355"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
