--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,11 +13,14 @@ documentation = "https://docs.rs/msp430fr2355"
 [dependencies]
 bare-metal = "0.1.0"
 msp430 = "0.1.0"
-vcell = "0.1.0"
+vcell = "0.1.2"
 
 [dependencies.msp430-rt]
 optional = true
 version = "0.1.3"
+
+[dependencies.msp430-atomic]
+git = "https://github.com/YuhanLiin/msp430-atomic"
 
 [features]
 rt = ["msp430-rt"]
