--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,9 +13,9 @@ jobs:
       - name: Checkout sources
         uses: actions/checkout@v2
 
-      - name: Install msp430-gcc
-      - shell: bash
-      - run: |
+      - name: Install msp430-elf-gcc
+        shell: bash
+        run: |
           curl -LO http://software-dl.ti.com/msp430/msp430_public_sw/mcu/msp430/MSPGCC/8_3_1_0/export/msp430-gcc-8.3.1.25_linux64.tar.bz2
           tar xjf msp430-gcc-8.3.1.25_linux64.tar.bz2
           echo "$PWD/msp430-gcc-8.3.1.25_linux64/bin" >> $GITHUB_PATH
