--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,10 @@ jobs:
           curl -LO http://software-dl.ti.com/msp430/msp430_public_sw/mcu/msp430/MSPGCC/8_3_1_0/export/msp430-gcc-8.3.1.25_linux64.tar.bz2
           tar xjf msp430-gcc-8.3.1.25_linux64.tar.bz2
           echo "$GITHUB_WORKSPACE/msp430-gcc-8.3.1.25_linux64/bin" >> $GITHUB_PATH
-          msp430-elf-gcc --version
+
+      - name: Check msp430-elf-gcc
+        shell: bash
+        run: msp430-elf-gcc --version
 
       - name: Install nightly toolchain
         uses: actions-rs/toolchain@v1
