--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ documentation = "https://docs.rs/msp430fr2355"
 [dependencies]
 critical-section = { version = "1.0", optional = true }
 msp430 = "0.4.0"
-portable-atomic = "0.3.15"
+portable-atomic = { version = "0.3.16", default-features = false }
 msp430-rt = { version = "0.4.0", optional = true }
 vcell = "0.1.0"
 
